--- a/Bionly/Bionly/AppShell.xaml
+++ b/Bionly/Bionly/AppShell.xaml
@@ -63,7 +63,7 @@
                         <VisualStateGroup x:Name="CommonStates">
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="White" />
+                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{x:OnPlatform UWP=White, Android=Black}" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
@@ -95,7 +95,7 @@
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
-    <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked"/>
+    <MenuItem x:Name="AccBtn" Text="Abmelden" StyleClass="MenuItemLayoutStyle" IconImageSource="icon_logout.png" Clicked="AccBtn_Clicked"/>
 
     <!--
         TabBar lets you define content that won't show up in a flyout menu. When this content is active
