Implemented #29, improved device detail pages

--- a/Bionly/Bionly/Views/ChartsPage.xaml
+++ b/Bionly/Bionly/Views/ChartsPage.xaml
@@ -6,7 +6,7 @@
              x:Class="Bionly.Views.ChartsPage" Title="Diagramme">
     
     <ContentPage.BindingContext>
-        <vm:DashboardViewModel />
+        <vm:ChartsViewModel />
     </ContentPage.BindingContext>
 
     <ContentPage.ToolbarItems>
