--- a/Bionly/Bionly/Views/DashboardPage.xaml
+++ b/Bionly/Bionly/Views/DashboardPage.xaml
@@ -16,9 +16,9 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <Grid Margin="0,10,0,0" Padding="0">
+        <Grid Margin="10" Padding="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="270"/>
+                <ColumnDefinition Width="220"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
@@ -67,7 +67,7 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <ListView x:Name="DeviceList" Grid.Row="1" ItemsSource="{Binding Source={x:Static vm:SettingsViewModel.Devices}}" VerticalOptions="Start" HorizontalOptions="Start" SelectionMode="Single" ItemTapped="ListView_ItemTapped">
+                <ListView x:Name="DeviceList" Grid.Row="1" ItemsSource="{Binding Source={x:Static vm:SettingsViewModel.Devices}}" VerticalOptions="Start" HorizontalOptions="Start" SelectionMode="Single" ItemTapped="ListView_ItemTapped" ItemSelected="DeviceList_ItemSelected">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ImageCell Text="{Binding Name}" Detail="{Binding CurrentValuesStr}" TextColor="Black" DetailColor="Black" ImageSource="{Binding DeviceSymbol}"/>
@@ -84,16 +84,32 @@
                 <StackLayout.IsVisible>
                     <OnIdiom x:TypeArguments="x:Boolean" Default="True" Phone="False"/>
                 </StackLayout.IsVisible>
-                <Label Text="Guten Tag" FontSize="40"/>
-                <Label Text="1 von 3 Geräten verbunden" FontSize="Medium"/>
-                <StackLayout Margin="0,20,0,0">
-                    <StackLayout Orientation="Horizontal">
-                        <Button Text="Verbinden" BackgroundColor="Green" WidthRequest="120"/>
-                        <Button Text="Bilder" WidthRequest="120" Clicked="ImagesBtn_Clicked"/>
-                        <Button Text="Messwerte" WidthRequest="120" Clicked="MeasurementsBtn_Clicked"/>
-                        <Button Text="Diagramme" WidthRequest="120" Clicked="ChartsBtn_Clicked"/>
-                        <Button Text="Verwalten" WidthRequest="120" IsVisible="true" Clicked="ConfigBtn_Clicked"/>
-                    </StackLayout>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Image x:Name="WelcomeImg" Source="icon_morning.png" WidthRequest="110"/>
+                    <Grid Grid.Column="1" Margin="0,10,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Label x:Name="WelcomeTxt" Text="Guten Tag" FontSize="40"/>
+                        <Label x:Name="ConnectedTxt" Grid.Row="1" Text="1 von 3 Geräten verbunden" FontSize="Medium"/>
+                    </Grid>
+                </Grid>
+                <StackLayout x:Name="StartpageContainer">
+                    <Label Text="Wählen Sie ein Gerät aus, um Werzeuge und Daten angezeigt zu bekommen." FontSize="Small" Margin="0,40,0,0"/>
+                </StackLayout>
+                <StackLayout x:Name="DeviceContainer" Margin="0,20,0,0" IsVisible="false">
+                    <FlexLayout Wrap="Wrap">
+                        <Button Text="Verbinden" BackgroundColor="Green" WidthRequest="120" Margin="2"/>
+                        <Button Text="Bilder" WidthRequest="120" Margin="2" Clicked="ImagesBtn_Clicked"/>
+                        <Button Text="Messwerte" WidthRequest="120" Margin="2" Clicked="MeasurementsBtn_Clicked"/>
+                        <Button Text="Diagramme" WidthRequest="120" Margin="2" Clicked="ChartsBtn_Clicked"/>
+                        <Button Text="Verwalten" WidthRequest="120" Margin="2" IsVisible="true" Clicked="ConfigBtn_Clicked"/>
+                    </FlexLayout>
                     <mch:ChartView x:Name="RadChart" HeightRequest="150" WidthRequest="370" HorizontalOptions="Start" Margin="10"/>
                 </StackLayout>
             </StackLayout>
