--- a/Bionly/Bionly/Views/DeviceSettingsPage.xaml
+++ b/Bionly/Bionly/Views/DeviceSettingsPage.xaml
@@ -10,7 +10,7 @@
     </ContentPage.BindingContext>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Löschen" Clicked="DeleteBtn_Clicked"/>
+        <ToolbarItem Text="Löschen" Command="{Binding DeleteDevice}"/>
         <ToolbarItem Text="Speichern" Command="{Binding SaveDevice}"/>
     </ContentPage.ToolbarItems>
 
